--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,6 +9,10 @@
     margin: 0;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
     position: absolute;
     width: 100%;
@@ -74,8 +78,7 @@ header ul li a {
 }
 
 .about-me-title {
-    border-right: 1px solid black;
-    padding-right: 24px;
+    margin-right: 24px;
     word-wrap: normal;
     width: 10%;
     text-align: right;
@@ -84,7 +87,13 @@ header ul li a {
 .about-me-text {
     width: 60%;
     word-wrap: normal;
-    margin-left: 24px
+    margin-left: 24px;
+    border-left: 1px solid black;
+    padding-left: 24px;
+}
+
+.about-me-h5 {
+    margin: 12px 0px;
 }
 
 .work {
@@ -96,25 +105,27 @@ header ul li a {
 }
 
 .work-title {
-    border-right: 1px solid black;
-    padding-right: 24px;
+    margin-right: 24px;
     word-wrap: normal;
     width: 10%;
     text-align: right;
 }
 
 .work-tiles {
+    border-left: 1px solid black;
+    padding-left: 24px;
     width: 60%;
     margin-left: 24px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .main-tile {
     width: 100%;
     height: 200px;
-    background: var(--maincolor);
+    background-image: url("../images/tile-background.jpeg");
     border: 4px solid var(--secondarycolor);
     display: flex;
     align-items:flex-end;
@@ -127,9 +138,10 @@ header ul li a {
 }
 
 .sub-tile {
-    width: 50%;
+    /* flex: 1 0 50%; */
+    width: 48.5%;
     height: 100px;
-    background: var(--maincolor);
+    background-image: url("../images/tile-background.jpeg");
     border: 4px solid var(--secondarycolor);
     display: flex;
     align-items:flex-end;
@@ -146,20 +158,20 @@ header ul li a {
 }
 
 .contact-me-title {
-    border-right: 1px solid black;
-    padding-right: 24px;
+    margin-right: 24px;
     word-wrap: normal;
-    width: 10%;
+    width: 15%;
     text-align: right;
 }
 
 .contact-me-text {
-    width: 60%;
+    border-left: 1px solid black;
+    width: 65%;
     word-wrap: normal;
     margin-left: 24px;
     display: flex;
     justify-content: space-evenly;
-
+    line-height: 5;
 }
 
 .contact-me ul {
@@ -174,3 +186,29 @@ header ul li a {
     text-decoration: none;
     color: black;
 }
+
+@media screen and (max-width: 768px) {
+    .header-left {
+        height: 4em;
+    }
+
+    .header-left h1 {
+      font-size: 12px;
+    }
+
+    .header-right nav{
+        font-size: 8px;
+    }
+
+    .about-me-title {
+        font-size: 12px;
+    }
+
+    .work-title {
+        font-size: 12px;
+    }
+
+    .contact-me-title {
+        font-size: 12px;
+    }
+  }
